--- a/package.json
+++ b/package.json
@@ -5,18 +5,37 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^4.20.0",
+    "gatsby-plugin-emotion": "^7.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
+    "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
+    "gatsby-plugin-typescript": "^4.20.0",
+    "gatsby-remark-copy-linked-files": "^5.20.0",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^6.20.0",
+    "gatsby-remark-prismjs": "^6.20.0",
+    "gatsby-remark-smartypants": "^5.20.0",
     "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "gatsby"
