--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.20.0",
+    "gatsby-plugin-canonical-urls": "^4.21.0",
     "gatsby-plugin-emotion": "^7.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
@@ -22,9 +24,10 @@
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-prismjs": "^6.20.0",
     "gatsby-remark-smartypants": "^5.20.0",
-    "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-source-filesystem": "^4.21.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "gh-pages": "^4.0.0",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
@@ -48,7 +51,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby-build && gh-pages -d public -b master"
   },
   "repository": {
     "type": "git",
